Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/Employee_Badge__c.object-meta.xml
<CustomObject>
    <label>Employee Badge</label>
    <nameField>
        <displayFormat>Emp Badge-{0000}</displayFormat>
        <label>Employee Badge  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>