Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/fields/Assigned_Badge__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Badge</label>
    <referenceTo>Badge_Configuration__c</referenceTo>
    <relationshipLabel>Employee Badges (Approved_Badge)</relationshipLabel>
    <relationshipName>Employee_Badges1</relationshipName>
    <type>Lookup</type>
</CustomField>