Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/fields/Badge_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Badge_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge Configuration</label>
    <referenceTo>Badge_Configuration__c</referenceTo>
    <relationshipLabel>Employee Badges</relationshipLabel>
    <relationshipName>Employee_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>