Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Employee Badges</relationshipLabel>
    <relationshipName>Employee_Badges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>