Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserEmail</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>