Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee__c</columns>
    <columns>Category__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Status__c</columns>
    <columns>Recommended_Badge__c</columns>
    <columns>Assigned_Badge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>