Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/listViews/Employee_Badges.listView-meta.xml
<ListView>
    <fullName>Employee_Badges</fullName>
    <columns>Employee__c</columns>
    <columns>Category__c</columns>
    <columns>Assigned_Badge__c</columns>
    <filterScope>Mine</filterScope>
    <label>Employee Badges</label>
</ListView>