Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Badge__c/listViews/Pending_Employee_Badges.listView-meta.xml
<ListView>
    <fullName>Pending_Employee_Badges</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Status__c</columns>
    <columns>Recommended_Badge__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Employee Badges</label>
</ListView>